# CODING_SKILLS

./: README.md
Student Record Management System/: CMakeLists.txt  resources.qrc
Student Record Management System/src/: logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  startdialog.cpp  startdialog.h
Student Record Management System/styles/: stylesheet.qss
Sudoku Solver/: CMakeLists.txt
Sudoku Solver/src/: MainWindow.cpp  MainWindow.h  SudokuEngine.cpp  SudokuEngine.h  main.cpp
